--- a/dashboard.html
+++ b/dashboard.html
@@ -85,7 +85,7 @@
     /* LIVE PRICE FROM GOOGLE SHEET API */
     async function getLivePrice(symbol) {
 
-      const apiURL = "https://script.google.com/macros/s/AKfycbxG5XG8HUP9IMI3lAnFf4w0Vodbmf-xZitvmNb6hD0SSq7X3mm59lORefWcckCQwKUu4g/exechttps://script.google.com/macros/s/AKfycbxG5XG8HUP9IMI3lAnFf4w0Vodbmf-xZitvmNb6hD0SSq7X3mm59lORefWcckCQwKUu4g/exec";
+      const apiURL = "https://script.google.com/macros/s/AKfycbxG5XG8HUP9IMI3lAnFf4w0Vodbmf-xZitvmNb6hD0SSq7X3mm59lORefWcckCQwKUu4g/exec";
 
       try {
         const response = await fetch(apiURL);
@@ -126,3 +126,4 @@
 </body>
 
 </html>
+
